samples/_failures_safe/1761297029_431a92_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_56a95e0d.c: In function ‘main’:
./samples/SAFE/__tmp_56a95e0d.c:158:5: error: expected declaration or statement at end of input
  158 |     } else {
      |     ^
./samples/SAFE/__tmp_56a95e0d.c:158:5: error: expected declaration or statement at end of input
